<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Just Java</string>
    <string name="quantity">Quantity</string>
    <string name="order_summary_quantity">Quantity: <xliff:g id="quantity" example="5">%d</xliff:g></string>
    <string name="name">Name</string>
    <string name="price">Price: <xliff:g id="price" example="10$">%s</xliff:g></string>
    <string name="toppings">Toppings</string>
    <string name="whipped_cream">Whipped cream</string>
    <string name="chocolate">Chocolate</string>
    <!-- Hint text display in the empty field for the user's name [CHAR LIMIT=20] -->
    <string name="order">Order</string>
    <string name="order_summary">Order Summary</string>

    <!--
      Name for the order summary. It will be shown in the format of "Name: Amy" where Amy is the
      user's name. [CHAR LIMIT=NONE]
    -->
    <string name="add_topping">Added topping: <xliff:g id="topping" example="Chocolate">%s</xliff:g></string>
    <string name="thank_you">Thank you!</string>
    <string name="order_summary_name">Name: <xliff:g id="name" example="Amy">%s</xliff:g></string>
</resources>
